--- a/CACP/app/src/main/res/values/strings.xml
+++ b/CACP/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name">중국어음성</string>
-    <string name="title_activity_navigation">NavigationActivity</string>
+    <string name="app_name">Toneviewer</string>
+    <string name="title_activity_navigation">Toneviewer</string>
     <string name="title_home">Home</string>
     <string name="title_dashboard">History</string>
     <string name="title_notifications">Settings</string>
